# swagger/docs/tables/list.json
@@ -22,7 +22,7 @@
     },
     "responses": {
       "200": {
-        "description": "Tables list",
+        "description": "No Items",
         "content": {
           "application/json": {
             "schema": {
@@ -31,7 +31,7 @@
                 "message": {
                   "description": "Success message.",
                   "type": "string",
-                  "example": "Tables list"
+                  "example": "No Items"
                 },
                 "meta": {
                   "type": "object",
@@ -39,7 +39,7 @@
                     "total": {
                       "description": "Total of the meta data.",
                       "type": "number",
-                      "example": 2
+                      "example": 0
                     },
                     "page": {
                       "description": "Page of the meta data.",
@@ -50,318 +50,6 @@
                       "description": "Limit of the meta data.",
                       "type": "number",
                       "example": 5
-                    },
-                    "base_url": {
-                      "description": "Base_url of the meta data.",
-                      "type": "object",
-                      "example": {
-                        "table_photo": "https://s3.ap-south-1.amazonaws.com/high-table-2024/public/photo/tables/",
-                        "table_video": "https://s3.ap-south-1.amazonaws.com/high-table-2024/public/video/tables/"
-                      }
-                    },
-                    "table_photo": {
-                      "description": "Table_photo of the meta data.",
-                      "type": "object",
-                      "example": {
-                        "hd": "https://s3.ap-south-1.amazonaws.com/high-table-2024/public/photo/tables/hd/",
-                        "standardResolution": "https://s3.ap-south-1.amazonaws.com/high-table-2024/public/photo/tables/standardResolution/"
-                      }
-                    },
-                    "table_video": {
-                      "description": "Table_video of the meta data.",
-                      "type": "object",
-                      "example": {
-                        "hd": "https://s3.ap-south-1.amazonaws.com/high-table-2024/public/video/tables/hd/",
-                        "standardResolution": "https://s3.ap-south-1.amazonaws.com/high-table-2024/public/video/tables/standardResolution/"
-                      }
-                    },
-                    "profile_photo": {
-                      "description": "Profile_photo of the meta data.",
-                      "type": "string",
-                      "example": "https://s3.ap-south-1.amazonaws.com/high-table-2024/public/photo/members/"
-                    },
-                    "category_photo": {
-                      "description": "Category_photo of the meta data.",
-                      "type": "string",
-                      "example": "https://s3.ap-south-1.amazonaws.com/high-table-2024/public/image/interests/"
-                    }
-                  }
-                },
-                "items": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "id": {
-                        "description": "Id of the item.",
-                        "type": "string",
-                        "example": "930"
-                      },
-                      "full_name": {
-                        "description": "Full_name of the item.",
-                        "type": "string",
-                        "example": "Test account 11 "
-                      },
-                      "type": {
-                        "description": "Type of the item.",
-                        "type": "number",
-                        "example": 2
-                      },
-                      "media": {
-                        "description": "Media of the item.",
-                        "type": "object",
-                        "example": [
-                          "image-930_1.webp"
-                        ]
-                      },
-                      "video": {
-                        "description": "Video of the item.",
-                        "type": "object",
-                        "example": null
-                      },
-                      "description": {
-                        "description": "Description of the item.",
-                        "type": "string",
-                        "example": "Testing description "
-                      },
-                      "phone": {
-                        "description": "Phone of the item.",
-                        "type": "string",
-                        "example": ""
-                      },
-                      "min_seats": {
-                        "description": "Min_seats of the item.",
-                        "type": "number",
-                        "example": 4
-                      },
-                      "max_seats": {
-                        "description": "Max_seats of the item.",
-                        "type": "number",
-                        "example": 4
-                      },
-                      "booked_seats": {
-                        "description": "Booked_seats of the item.",
-                        "type": "number",
-                        "example": 2
-                      },
-                      "booked": {
-                        "description": "Booked of the item.",
-                        "type": "number",
-                        "example": 2
-                      },
-                      "bookmarks": {
-                        "description": "Bookmarks of the item.",
-                        "type": "number",
-                        "example": 0
-                      },
-                      "followers": {
-                        "description": "Followers of the item.",
-                        "type": "number",
-                        "example": 0
-                      },
-                      "title": {
-                        "description": "Title of the item.",
-                        "type": "string",
-                        "example": "Demo test table "
-                      },
-                      "price": {
-                        "description": "Price of the item.",
-                        "type": "number",
-                        "example": 100
-                      },
-                      "tags": {
-                        "description": "Tags of the item.",
-                        "type": "string",
-                        "example": "Corporate,History & Heritage"
-                      },
-                      "address": {
-                        "description": "Address of the item.",
-                        "type": "string",
-                        "example": "Chennai International Airport (MAA), Airport Road, Meenambakkam, Chennai, Tamil Nadu, India"
-                      },
-                      "city": {
-                        "description": "City of the item.",
-                        "type": "string",
-                        "example": "Chennai"
-                      },
-                      "event_date": {
-                        "description": "Event_date of the item.",
-                        "type": "string",
-                        "example": "2024-12-25 06:30:00"
-                      },
-                      "reviews": {
-                        "description": "Reviews of the item.",
-                        "type": "number",
-                        "example": 0
-                      },
-                      "user_type": {
-                        "description": "User_type of the item.",
-                        "type": "number",
-                        "example": 12313
-                      },
-                      "status": {
-                        "description": "Status of the item.",
-                        "type": "number",
-                        "example": 3
-                      },
-                      "admin_id": {
-                        "description": "Admin_id of the item.",
-                        "type": "number",
-                        "example": 0
-                      },
-                      "event_done_flag": {
-                        "description": "Event_done_flag of the item.",
-                        "type": "boolean",
-                        "example": false
-                      },
-                      "state": {
-                        "description": "State of the item.",
-                        "type": "string",
-                        "example": "Tamil Nadu"
-                      },
-                      "district": {
-                        "description": "District of the item.",
-                        "type": "string",
-                        "example": ""
-                      },
-                      "pincode": {
-                        "description": "Pincode of the item.",
-                        "type": "string",
-                        "example": "600027"
-                      },
-                      "order_by": {
-                        "description": "Order_by of the item.",
-                        "type": "string",
-                        "example": ""
-                      },
-                      "table_expense": {
-                        "description": "Table_expense of the item.",
-                        "type": "number",
-                        "example": 0
-                      },
-                      "location_details": {
-                        "description": "Location_details of the item.",
-                        "type": "object",
-                        "example": {
-                          "country": "India",
-                          "locality": "Chennai",
-                          "political": "India",
-                          "postal_code": "600027",
-                          "sublocality_level_1": "Meenambakkam"
-                        }
-                      },
-                      "location": {
-                        "description": "Location of the item.",
-                        "type": "object",
-                        "example": {
-                          "lat": 12.9939595,
-                          "lng": 80.1706653
-                        }
-                      },
-                      "inclusion": {
-                        "description": "Inclusion of the item.",
-                        "type": "string",
-                        "example": "No inclusion added"
-                      },
-                      "exclusions": {
-                        "description": "Exclusions of the item.",
-                        "type": "string",
-                        "example": "That's ur wish "
-                      },
-                      "format_geo_address": {
-                        "description": "Format_geo_address of the item.",
-                        "type": "string",
-                        "example": "Chennai International Airport (MAA), Airport Rd, Meenambakkam, Chennai, Tamil Nadu, India"
-                      },
-                      "category": {
-                        "description": "Category of the item.",
-                        "type": "object",
-                        "example": {
-                          "created_at": "2024-09-18T09:41:14.192Z",
-                          "updated_at": "2024-09-18T09:41:14.192Z",
-                          "id": "5",
-                          "name": "Books/Movies",
-                          "image": "",
-                          "width": 50,
-                          "height": 50,
-                          "status": 1,
-                          "orderby": 5
-                        }
-                      },
-                      "created_by": {
-                        "description": "Created_by of the item.",
-                        "type": "number",
-                        "example": 1303
-                      },
-                      "user_profile": {
-                        "description": "User_profile of the item.",
-                        "type": "object",
-                        "example": {
-                          "created_at": "2024-12-10T07:31:27.086Z",
-                          "updated_at": "2024-12-13T09:41:35.749Z",
-                          "id": 1303,
-                          "email": "",
-                          "first_name": "Test account ",
-                          "last_name": "",
-                          "description": "",
-                          "photo": "members-photo-1303.png",
-                          "phone": "98fbee56bb61192c8bdb5d11401a4992",
-                          "street": "",
-                          "address": "",
-                          "city": "",
-                          "state": "",
-                          "postal_code": "",
-                          "status": 1,
-                          "status_glossary": "",
-                          "about_me": "Hello its me tester  sdsdsds to",
-                          "one_signal_push_tokens": null,
-                          "tokens": null,
-                          "last_active": null,
-                          "last_checkin_via": "",
-                          "facebook_id": null,
-                          "facebook_data": {
-                            "facebook_id": "122133156758193230",
-                            "first_name": "Anil",
-                            "last_name": "Shetty",
-                            "email": "hightableai@yahoo.com",
-                            "picture": "https://scontent.xx.fbcdn.net/v/t1.30497-1/84628273_176159830277856_972693363922829312_n.jpg?stp=c379.0.1290.1290a_dst-jpg_s960x960_tt6&_nc_cat=1&ccb=1-7&_nc_sid=7565cd&_nc_ohc=NdBiYl4hSw0Q7kNvgE5dFTh&_nc_zt=24&_nc_ht=scontent.xx&edm=AP4hL3IEAAAA&_nc_gid=AowkLCs1-YyVvVnekxg5xYR&oh=00_AYAmfCfAC_Ycctjn_IE-0bHCPMMr_satU5prte3eMh0f8Q&oe=6781C699"
-                          },
-                          "linkedin_id": null,
-                          "linkedin_data": null,
-                          "interests": [
-                            1,
-                            2,
-                            3,
-                            5,
-                            7,
-                            4
-                          ],
-                          "followers": 0,
-                          "google_id": null,
-                          "google_data": null,
-                          "otp_session_id": null,
-                          "reviews": 2.25,
-                          "reviews_count": 2,
-                          "linked_account_id": "",
-                          "linked_product_id": "",
-                          "pronoun": "",
-                          "instagram_data": null,
-                          "instagram_link": "https://www.instagram.com/Tester",
-                          "linkedin_link": "https://www.linkedin.com/in/Tester",
-                          "x_link": "https://www.x.com/Tester",
-                          "x_data": null,
-                          "table_count": 3,
-                          "booked": 2,
-                          "age": 28,
-                          "gender": "Female",
-                          "account_details": null,
-                          "profile_completion_status": [
-                            100
-                          ],
-                          "uu_id": "UcIDHMaYjc",
-                          "account": 1656
-                        }
-                      }
                     }
                   }
                 }
